Fix spacing and positioning for user nav and home list on smaller screens

--- a/app/assets/scss/_block-elements.scss
+++ b/app/assets/scss/_block-elements.scss
@@ -20,6 +20,7 @@
 main {
   
   box-sizing: border-box;
+  padding-top: $base-spacing * 2;
   width: 100%;
 
   .content-main {
